--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 </head>
-<body onload="refresh()">
+<body onload="refresh()" onresize="refresh()">
 	<canvas id="canvas" width="0" height="0">
   An alternative text describing what your canvas displays. 
 </canvas>
@@ -33,8 +33,6 @@
 	var mousey = 0;
 	var color = ColorPicker.value;
 	var radius = 20;
-	
-
 	function refresh(){
 		ctx.canvas.width = window.innerWidth * 0.8;
 		ctx.canvas.height = window.innerHeight * 0.8;
@@ -108,9 +106,6 @@
 		}
 	})
 
-	if(window.innerHeight > window.innerWidth){
-		refresh()
-	}
 
 
 </script>
