--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			border: 1px solid black;
 
 		}
+		input{
+			display: block;
+			margin:2em;
+		}
+        
 
 	</style>
 
@@ -31,11 +36,17 @@
 	var ColorPicker = document.querySelector('#colpicker');
 	var mousex = 0;
 	var mousey = 0;
+	//8. Add a color picker that allows the user to choose a different color. This won't work in Safari (on mobile), thats okay.
 	var color = ColorPicker.value;
 	var radius = 20;
 	function refresh(){
-		ctx.canvas.width = window.innerWidth * 0.8;
-		ctx.canvas.height = window.innerHeight * 0.8;
+		//1.  Create a canvas element with a border. The canvas should be about 80% the width and 80% height of the screen. If the window is dynamically resized, you do not need to resize the canvas, but if I use Inspect element to switch to different device size it should.
+		ctx.canvas.width = window.innerWidth * 0.9;
+		ctx.canvas.height = window.innerHeight * 0.9;
+
+		//7. On a mobile device changing the orientation should clear and resize the canvas. This may be tricky so do what you need to do to make it work. (It may be more dramatic than "clearing" the canvas.
+
+
 		ctx.clearRect(0, 0, canvas.width, canvas.height);
 	}
 
@@ -46,6 +57,7 @@
 		ctx.fill();
 	}
 	window.addEventListener("mousemove" , function(e){
+		//2. Create a "pen" that moves with the mouse by drawing arcs. The default color should be red. If you move the mouse quickly the line will be choppy.
 		mousex = e.pageX;
 		mousey = e.pageY;
 		color = ColorPicker.value;
@@ -54,6 +66,7 @@
 
 	})
 	document.addEventListener("touchmove" , function(e){
+		//6. React to touch events the same way you react to the mouse movements.
 		mousex = e.changedTouches[0].pageX
 		mousey = e.changedTouches[0].pageY
 		color = ColorPicker.value;
@@ -62,6 +75,9 @@
 	})
 
 	window.addEventListener("keydown" , function(e){
+		//3. Alternate the pen colors by hitting the pressing the "b" for blue, the "g" for green, the "r" for red, and the "y" for yellow.
+
+
 		console.log(e.key);
 		if (e.key == "r"|"R"){
 			color = "#FF0000";
@@ -88,6 +104,7 @@
 			color = "#FFA500";
 			ColorPicker.value = color;
 		}
+		//4. Use the up (larger) and down (smaller) arrow keys to change the radius of the pensize.  Make sure that the pen can never be set to 0 or less.
 		else if(e.key == "ArrowUp"){
 			radius = radius+5;
 		}
@@ -98,6 +115,7 @@
 			}
 		}
 		else if(e.keyCode == "32"){
+			//5. Clear the canvas by using the space bar.
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
 			draw();
 		}
